@@ -194,7 +194,86 @@ AT_DATA([prog.cob], [
 AT_CHECK([$COMPILE prog.cob], [0], [], [])
 
 AT_CHECK([COB_CURRENT_DATE='2015/04/05 18:45:22' \
-./prog], [0], [PROCESS DATE/TIME : 04/05/15 18:45:22], [])
+$COBCRUN_DIRECT ./prog], [0], [PROCESS DATE/TIME : 04/05/15 18:45:22], [])
+
+AT_CLEANUP
+
+
+# verify that the current date between ACCEPT DATE and DAY matches
+# using the intrinsic conversion FUNCTIONs
+AT_SETUP([ACCEPT DATE / DAY and intrinsic functions (1)])
+AT_KEYWORDS([accept FUNCTION INTEGER-OF-DATE DAY-OF-INTEGER])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       *> one byte longer to make sure there is no garbage in
+       01  WS-YYYYMMDD   PIC 9(9).
+       01  WS-YYYYDDD    PIC 9(8).
+       PROCEDURE        DIVISION.
+           ACCEPT WS-YYYYMMDD FROM DATE YYYYMMDD
+           END-ACCEPT
+           ACCEPT WS-YYYYDDD  FROM DAY  YYYYDDD
+           END-ACCEPT
+           IF    FUNCTION INTEGER-OF-DATE (WS-YYYYMMDD)
+           NOT = FUNCTION INTEGER-OF-DAY  (WS-YYYYDDD)
+              DISPLAY "DIFFERENCES FOUND!"
+              END-DISPLAY
+              DISPLAY "YYYYMMDD = " WS-YYYYMMDD ", "
+                      "YYYYDDD = " WS-YYYYDDD
+              END-DISPLAY
+              DISPLAY "INTEGER-OF-DATE = "
+                      FUNCTION INTEGER-OF-DATE (WS-YYYYMMDD) ", "
+                      "INTEGER-OF-DAY = "
+                      FUNCTION INTEGER-OF-DAY  (WS-YYYYDDD)
+              END-DISPLAY
+              MOVE 1 TO RETURN-CODE
+           END-IF
+           STOP RUN.
+])
+
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
+
+AT_CLEANUP
+AT_SETUP([ACCEPT DATE / DAY and intrinsic functions (2)])
+AT_KEYWORDS([accept configuration FUNCTION INTEGER-OF-DATE DAY-OF-INTEGER])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       *> one byte longer to make sure there is no garbage in
+       01  WS-YYYYMMDD   PIC 9(9).
+       01  WS-YYYYDDD    PIC 9(8).
+       PROCEDURE        DIVISION.
+           ACCEPT WS-YYYYMMDD FROM DATE YYYYMMDD
+           END-ACCEPT
+           ACCEPT WS-YYYYDDD  FROM DAY  YYYYDDD
+           END-ACCEPT
+           IF    FUNCTION INTEGER-OF-DATE (WS-YYYYMMDD)
+           NOT = FUNCTION INTEGER-OF-DAY  (WS-YYYYDDD)
+              DISPLAY "DIFFERENCES FOUND!"
+              END-DISPLAY
+              DISPLAY "YYYYMMDD = " WS-YYYYMMDD ", "
+                      "YYYYDDD = " WS-YYYYDDD
+              END-DISPLAY
+              DISPLAY "INTEGER-OF-DATE = "
+                      FUNCTION INTEGER-OF-DATE (WS-YYYYMMDD) ", "
+                      "INTEGER-OF-DAY = "
+                      FUNCTION INTEGER-OF-DAY  (WS-YYYYDDD)
+              END-DISPLAY
+              MOVE 1 TO RETURN-CODE
+           END-IF
+           STOP RUN.
+])
+
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CHECK([COB_CURRENT_DATE='2015/04/05 18:45:22' \
+$COBCRUN_DIRECT ./prog], [0], [], [])
 
 AT_CLEANUP
 
